fixed parameter initialiser so that it uses the sample method of ParametricDistibution. This also removes need for special code to handle Dirichlet and multivariate distributions